Simplify InverseContext implementation